# accidents-nc

./: .dockerignore  .env  .gitignore  DOCKER.md  Dockerfile  Dockerfile.api  Dockerfile.dagster  Dockerfile.training  INDUSTRIALISATION.md  PHASE1_COMPLETED.md  QUERIES.md  README.md  STREAMLIT_APP.md  TODO.md  accident_fetch_data.py  app_predict_map.py  automl_benchmark.py  create_bucket.py  docker-compose.yml  download_data.sh  precompute_density.py  predict_daily.py  predict_map.py  pyproject.toml  rebuild-and-deploy.sh  tmp.md
.github/: copilot-instructions.md
.streamlit/: config.toml
api/: main.py
dagster_accidents/: assets.py  assets_prod.py  jobs.py  repository.py
k8s/: KUBERNETES.md  README.md  cronjob-training.yaml  deploy-mlflow.sh  deploy.sh  deployment-api.yaml  namespace.yaml  setup-microk8s.sh
k8s/dagster/: ARGOCD.md  DEPLOY_DAGSTER.md  HELM_CONFIG.md  argocd-application.yaml  configmap-dagster-ducklake.yaml  dagster-helm-app-updated.yaml  deploy-dagster-user.sh  deployment-dagster-user.yaml  kustomization.yaml  pvc-dagster-models.yaml  workspace.yaml
k8s/streamlit/: README.md  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
notebooks/: 01_ingest_raw.py  02_enrich_features.py  03_prepare_datasets.py  04_model_training.py
pipeline/: __init__.py  config.py  stage_datasets.py  stage_features.py  stage_ingest.py  stage_modeling.py
tests/: test_features.py
